# backend-template-old

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  Pipfile  README.md  dangerfile.js  docker-compose.yml  entrypoint.sh  heroku.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: Danger.yml  ci.yml  sentry_release.yml
project/: base.py  celery.py  settings.py  settings_test.py  tests.py  urls.py
users/: admin.py  models.py  services.py  signals.py
users/migrations/: 0001_initial.py
users/tests/: test_services.py
workflows/: ci.yml
